--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <form action="" id="contactForm">
             <div class="alert">Your message sent</div>
+            <div class="alert alert2">Please fill out the following area</div>
 
             <div class="inputBox">
                 <input type="text" id="name" placeholder="Your name...." />
