--- a/index.html
+++ b/index.html
@@ -2,38 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Messages | Firebase</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Sign Up Page</title>
 </head>
 <body>
-    <div class="container">
-        <form action="" id="contactForm">
-            <div class="alert">Your message sent</div>
-            <div class="alert alert2">Please fill out the following area</div>
+    <h1>Sign Up</h1>
+    <p>User Name: </p>
+    <input type="text" id="text">
+    <p>User Email: </p>
+    <input type="email" id="email">
+    <p>User Password: </p>
+    <input type="password" id="password">
 
-            <div class="inputBox">
-                <input type="text" id="name" placeholder="Your name...." />
-            </div>
+    <input class="signupbtn" type="button" value="Sign Up">
 
-            <div class="inputBox">
-                <input type="email" id="emailid" placeholder="Your Email....." />
-            </div>
-
-            <div class="inputBox">
-                <textarea id="msgContent" cols="30" rows="10" placeholder="Message"></textarea>
-            </div>
-
-            <div class="inputBox">
-                <button type="submit">Submit</button>
-            </div>
-        </form>
-    </div>
-    
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-    <script src="./script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
