--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
     <p>User Email</p>
     <input type="email" id="loginemail">
     <p>User Password</p>
-    <input type="email" id="loginpassword">
+    <input type="password" id="loginpassword">
     <input id="loginbtn" type="button" value="Login">
 
     <script type="module" src="app.js"></script>
