--- a/Dashbord/index.html
+++ b/Dashbord/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Dashbord</h1>
+    <div class="body">
+        
+    </div>
 
     <script type="module" src="app.js"></script>
 </body>
